--- a/FinalProject 0.4/pom.xml
+++ b/FinalProject 0.4/pom.xml
@@ -13,6 +13,7 @@
         <postgres.version>42.1.4</postgres.version>
         <hibernate.version>5.2.12.Final</hibernate.version>
         <javaxmail.version>1.4.7</javaxmail.version>
+        <commons-io.version>2.6</commons-io.version>
     </properties>
 
     <parent>
@@ -53,6 +54,11 @@
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>${javaxmail.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
         </dependency>
     </dependencies>
 
