--- a/FinalProject 0.4/src/main/resources/application.properties
+++ b/FinalProject 0.4/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mail.password=admin123456
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.allow8bitmime=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+spring.http.multipart.max-file-size=3MB
+storage.path=E:\\Storage 
