fixed profileUpdater and some front pages

--- a/FinalProject 0.5/src/main/resources/application.properties
+++ b/FinalProject 0.5/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=postgres
-spring.datasource.password=1997
-spring.datasource.url=jdbc:postgresql://localhost:5432/LipatovProject_db
+spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://localhost:5432/Lipatov_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
